[package]
name = "gst-kvs-sink"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/FactbirdHQ/gst-kvs-sink"
description = "GStreamer sink that publishes media fragments to AWS Kinesis Video Streams"
authors = ["Factbird <dev@factbird.com>"]
keywords = ["gstreamer", "aws", "kvs", "kinesis", "video"]
categories = ["multimedia::video", "multimedia::encoding"]
readme = "README.md"

[lib]
name = "gstrskvssink"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
gstreamer = { version = "0.24", features = ["v1_20"] }
gstreamer-base = { version = "0.24", features = ["v1_20"] }
glib = "0.19"
once_cell = "1.19"

# AWS
aws-config = "1.8"
aws-sdk-kinesisvideo = "1.99"
aws-types = "1.3"
aws-sigv4 = "1.4"
aws-smithy-runtime-api = "1.11"
aws-credential-types = "1.2"
http = "0.2"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP client (for KVS PutMedia signed requests)
reqwest = { version = "0.12", default-features = false, features = ["http2", "stream", "rustls-tls"] }

# MKV/WebM
webm-iterable = "0.6"

# Misc
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
backoff = { version = "0.4", features = ["tokio"] }
futures = "0.3"

[build-dependencies]
gst-plugin-version-helper = "0.8"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
uuid = { version = "1.5", features = ["v4"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "io-util", "test-util"] }
ffprobe = "0.4"
futures = "0.3"

[patch.crates-io]
ebml-iterable = { git = "https://github.com/MathiasKoch/ebml-iterable", rev = "69e6583" }
